; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/ubifs/extr_orphan.c_erase_deleted.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/ubifs/extr_orphan.c_erase_deleted.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ubifs_info = type { i32, i32, %struct.ubifs_orphan*, i32 }
%struct.ubifs_orphan = type { i64, i32, i32, i32, %struct.ubifs_orphan* }

@.str = private unnamed_addr constant [24 x i8] c"deleting orphan ino %lu\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ubifs_info*)* @erase_deleted to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @erase_deleted(%struct.ubifs_info* %0) #0 {
  %2 = alloca %struct.ubifs_info*, align 8
  %3 = alloca %struct.ubifs_orphan*, align 8
  %4 = alloca %struct.ubifs_orphan*, align 8
  store %struct.ubifs_info* %0, %struct.ubifs_info** %2, align 8
  %5 = load %struct.ubifs_info*, %struct.ubifs_info** %2, align 8
  %6 = getelementptr inbounds %struct.ubifs_info, %struct.ubifs_info* %5, i32 0, i32 1
  %7 = call i32 @spin_lock(i32* %6)
  %8 = load %struct.ubifs_info*, %struct.ubifs_info** %2, align 8
  %9 = getelementptr inbounds %struct.ubifs_info, %struct.ubifs_info* %8, i32 0, i32 2
  %10 = load %struct.ubifs_orphan*, %struct.ubifs_orphan** %9, align 8
  store %struct.ubifs_orphan* %10, %struct.ubifs_orphan** %4, align 8
  br label %11

11:                                               ; preds = %14, %1
  %12 = load %struct.ubifs_orphan*, %struct.ubifs_orphan** %4, align 8
  %13 = icmp ne %struct.ubifs_orphan* %12, null
  br i1 %13, label %14, label %44

14:                                               ; preds = %11
  %15 = load %struct.ubifs_orphan*, %struct.ubifs_orphan** %4, align 8
  store %struct.ubifs_orphan* %15, %struct.ubifs_orphan** %3, align 8
  %16 = load %struct.ubifs_orphan*, %struct.ubifs_orphan** %3, align 8
  %17 = getelementptr inbounds %struct.ubifs_orphan, %struct.ubifs_orphan* %16, i32 0, i32 4
  %18 = load %struct.ubifs_orphan*, %struct.ubifs_orphan** %17, align 8
  store %struct.ubifs_orphan* %18, %struct.ubifs_orphan** %4, align 8
  %19 = load %struct.ubifs_orphan*, %struct.ubifs_orphan** %3, align 8
  %20 = getelementptr inbounds %struct.ubifs_orphan, %struct.ubifs_orphan* %19, i32 0, i32 3
  %21 = load i32, i32* %20, align 8
  %22 = icmp ne i32 %21, 0
  %23 = xor i1 %22, true
  %24 = zext i1 %23 to i32
  %25 = call i32 @ubifs_assert(i32 %24)
  %26 = load %struct.ubifs_orphan*, %struct.ubifs_orphan** %3, align 8
  %27 = getelementptr inbounds %struct.ubifs_orphan, %struct.ubifs_orphan* %26, i32 0, i32 2
  %28 = load %struct.ubifs_info*, %struct.ubifs_info** %2, align 8
  %29 = getelementptr inbounds %struct.ubifs_info, %struct.ubifs_info* %28, i32 0, i32 3
  %30 = call i32 @rb_erase(i32* %27, i32* %29)
  %31 = load %struct.ubifs_orphan*, %struct.ubifs_orphan** %3, align 8
  %32 = getelementptr inbounds %struct.ubifs_orphan, %struct.ubifs_orphan* %31, i32 0, i32 1
  %33 = call i32 @list_del(i32* %32)
  %34 = load %struct.ubifs_info*, %struct.ubifs_info** %2, align 8
  %35 = getelementptr inbounds %struct.ubifs_info, %struct.ubifs_info* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 8
  %37 = sub nsw i32 %36, 1
  store i32 %37, i32* %35, align 8
  %38 = load %struct.ubifs_orphan*, %struct.ubifs_orphan** %3, align 8
  %39 = getelementptr inbounds %struct.ubifs_orphan, %struct.ubifs_orphan* %38, i32 0, i32 0
  %40 = load i64, i64* %39, align 8
  %41 = call i32 @dbg_gen(i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0), i64 %40)
  %42 = load %struct.ubifs_orphan*, %struct.ubifs_orphan** %3, align 8
  %43 = call i32 @kfree(%struct.ubifs_orphan* %42)
  br label %11

44:                                               ; preds = %11
  %45 = load %struct.ubifs_info*, %struct.ubifs_info** %2, align 8
  %46 = getelementptr inbounds %struct.ubifs_info, %struct.ubifs_info* %45, i32 0, i32 2
  store %struct.ubifs_orphan* null, %struct.ubifs_orphan** %46, align 8
  %47 = load %struct.ubifs_info*, %struct.ubifs_info** %2, align 8
  %48 = getelementptr inbounds %struct.ubifs_info, %struct.ubifs_info* %47, i32 0, i32 1
  %49 = call i32 @spin_unlock(i32* %48)
  ret void
}

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @ubifs_assert(i32) #1

declare dso_local i32 @rb_erase(i32*, i32*) #1

declare dso_local i32 @list_del(i32*) #1

declare dso_local i32 @dbg_gen(i8*, i64) #1

declare dso_local i32 @kfree(%struct.ubifs_orphan*) #1

declare dso_local i32 @spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
